--- a/resources/NewsApplication_UI/package.json
+++ b/resources/NewsApplication_UI/package.json
@@ -31,6 +31,7 @@
     "@types/ckeditor__ckeditor5-build-classic": "^29.0.1",
     "@types/ckeditor__ckeditor5-paste-from-office": "^29.0.1",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.30",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
